--- a/SearchEngineProject/SearchEngineApp/SearchEngineApp.csproj
+++ b/SearchEngineProject/SearchEngineApp/SearchEngineApp.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="itext7" Version="8.0.5" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.1" />
+    <PackageReference Include="NPOI" Version="2.7.4" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
+    <PackageReference Include="Spire.Presentation" Version="10.7.7" />
+    <PackageReference Include="Spire.Doc" Version="10.7.16" />
+  </ItemGroup>
+
 </Project>
